Crash when going to lockscreen in 3.36.1
Affected version
Tested on Alpine Linux Edge. This worked fine with GNOME Shell&Mutter on version 3.36.0, so it probably regressed in 3.36.1. This was tested on Wayland.
Bug summary
Upon locking the screen (e.g. via. Super+L) Shell crashes and users are thrown back to GDM (with their session being destroyed).
Relevant logs, screenshots, screencasts etc.
Here's a backtrace:
warning: Corrupted shared library list: 0x7efe875c1da0 != 0x7efe872d69c4
Core was generated by `/usr/bin/gnome-shell'.
Program terminated with signal SIGABRT, Aborted.
#0 __restore_sigs (set=set@entry=0x7fff4ca0d520) at ./arch/x86_64/syscall_arch.h:40
40 ./arch/x86_64/syscall_arch.h: No such file or directory.
[Current thread is 1 (LWP 19950)]
#0 __restore_sigs (set=set@entry=0x7fff4ca0d520) at ./arch/x86_64/syscall_arch.h:40
#1 0x00007efe88619b38 in raise (sig=<optimized out>) at src/signal/raise.c:11
#2 0x0000563211a09d94 in dump_gjs_stack_on_signal_handler (signo=6) at ../src/main.c:392
#3 <signal handler called> () at src/signal/x86_64/restore.s
#4 __restore_sigs (set=set@entry=0x7fff4ca0dc10) at ./arch/x86_64/syscall_arch.h:40
#5 0x00007efe88619b38 in raise (sig=sig@entry=6) at src/signal/raise.c:11
#6 0x00007efe885f1719 in abort () at src/exit/abort.c:13
#7 0x00007efe880e062d in g_assertion_message (domain=domain@entry=0x0, file=file@entry=0x7efe8732b05f "../cogl/cogl/driver/gl/cogl-framebuffer-gl.c", line=line@entry=135, func=func@entry=0x7efe8732b4e0 <__func__.43588> "_cogl_framebuffer_gl_flush_viewport_state", message=<optimized out>, message@entry=0x56321710ff80 "assertion failed: (framebuffer->viewport_width >=0 && framebuffer->viewport_height >=0)") at ../glib/gtestutils.c:2914
#8 0x00007efe880e0691 in g_assertion_message_expr (domain=domain@entry=0x0, file=file@entry=0x7efe8732b05f "../cogl/cogl/driver/gl/cogl-framebuffer-gl.c", line=135, func=0x7efe8732b4e0 <__func__.43588> "_cogl_framebuffer_gl_flush_viewport_state", expr=<optimized out>) at ../glib/gtestutils.c:2940
#9 0x00007efe872f3aca in _cogl_framebuffer_gl_flush_stereo_mode_state (framebuffer=<optimized out>) at ../cogl/cogl/driver/gl/cogl-framebuffer-gl.c:247
#10 _cogl_framebuffer_gl_flush_state (draw_buffer=0x56321657a140, read_buffer=<optimized out>, state=<optimized out>) at ../cogl/cogl/driver/gl/cogl-framebuffer-gl.c:432
#11 0x00007efe8731e114 in cogl_framebuffer_clear4f (framebuffer=0x56321657a140, buffers=1, buffers@entry=94773130633184, red=0, green=0, green@entry=-3.05567852e-31, blue=0, blue@entry=3.16956069e-28, alpha=0, alpha@entry=3.09210519e-41) at ../cogl/cogl/cogl-framebuffer.c:356
#12 0x00007efe8731e278 in cogl_framebuffer_clear (framebuffer=<optimized out>, buffers=94773130633184, buffers@entry=1, color=color@entry=0x7efe885d4240 <transparent>) at ../cogl/cogl/cogl-framebuffer.c:413
#13 0x00007efe883975d2 in clear_framebuffer (framebuffer=<optimized out>) at ../src/shell-blur-effect.c:501
#14 0x00007efe88397c0d in paint_actor_offscreen (flags=<optimized out>, paint_context=0x563216c91fe0, self=0x563211c8e510 [ShellBlurEffect]) at ../src/shell-blur-effect.c:731
#15 shell_blur_effect_paint (effect=<optimized out>, paint_context=0x563216c91fe0, flags=<optimized out>) at ../src/shell-blur-effect.c:805
#16 0x00007efe877e6a27 in clutter_actor_continue_paint (self=<optimized out>, paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:4232
#17 0x00007efe87823feb in clutter_paint_node_paint (node=0x563214d77230 [ClutterActorNode], paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-paint-node.c:1027
#18 0x00007efe877ed00f in clutter_actor_paint (self=self@entry=0x563213f895a0 [StWidget], paint_context=paint_context@entry=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:4136
#19 0x00007efe877ed079 in clutter_actor_real_paint (actor=<optimized out>, paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:3840
#20 0x00007efe877e69c3 in clutter_actor_continue_paint (self=0x563217afee20 [ClutterActor], paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:4200
#21 0x00007efe87823feb in clutter_paint_node_paint (node=0x5632170790a0 [ClutterActorNode], paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-paint-node.c:1027
#22 0x00007efe877ed00f in clutter_actor_paint (self=self@entry=0x563217afee20 [ClutterActor], paint_context=paint_context@entry=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:4136
#23 0x00007efe877ed079 in clutter_actor_real_paint (actor=<optimized out>, paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:3840
#24 0x00007efe877e69c3 in clutter_actor_continue_paint (self=0x563217ae9360 [Gjs_ui_unlockDialog_UnlockDialog], paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:4200
#25 0x00007efe87823feb in clutter_paint_node_paint (node=0x5632172439e0 [ClutterActorNode], paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-paint-node.c:1027
#26 0x00007efe877ed00f in clutter_actor_paint (self=self@entry=0x563217ae9360 [Gjs_ui_unlockDialog_UnlockDialog], paint_context=paint_context@entry=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:4136
#27 0x00007efe877ed079 in clutter_actor_real_paint (actor=<optimized out>, paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:3840
#28 0x00007efe877e69c3 in clutter_actor_continue_paint (self=0x563213466f40 [StWidget], paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:4200
#29 0x00007efe87823feb in clutter_paint_node_paint (node=0x56321412b370 [ClutterActorNode], paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-paint-node.c:1027
#30 0x00007efe87823fff in clutter_paint_node_paint (node=0x563212aa4d80 [ClutterTransformNode], paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-paint-node.c:1034
#31 0x00007efe877ed00f in clutter_actor_paint (self=self@entry=0x563213466f40 [StWidget], paint_context=paint_context@entry=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:4136
#32 0x00007efe877ed079 in clutter_actor_real_paint (actor=<optimized out>, paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:3840
#33 0x00007efe877e69c3 in clutter_actor_continue_paint (self=0x5632127325c0 [StWidget], paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:4200
#34 0x00007efe87823feb in clutter_paint_node_paint (node=0x563214d16ed0 [ClutterActorNode], paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-paint-node.c:1027
#35 0x00007efe87823fff in clutter_paint_node_paint (node=0x5632170799e0 [ClutterClipNode], paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-paint-node.c:1034
#36 0x00007efe877ed00f in clutter_actor_paint (self=self@entry=0x5632127325c0 [StWidget], paint_context=paint_context@entry=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:4136
#37 0x00007efe877ed079 in clutter_actor_real_paint (actor=<optimized out>, paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:3840
#38 0x00007efe877e69c3 in clutter_actor_continue_paint (self=0x563212f08a60, paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:4200
#39 0x00007efe87823feb in clutter_paint_node_paint (node=0x563213ffe2d0 [ClutterActorNode], paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-paint-node.c:1027
#40 0x00007efe877ed00f in clutter_actor_paint (self=0x563212f08a60, paint_context=paint_context@entry=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:4136
#41 0x00007efe87831aed in clutter_stage_paint (self=<optimized out>, paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-stage.c:987
#42 0x00007efe87644241 in meta_stage_paint (actor=0x563212026d00 [MetaStage], paint_context=0x563216c91fe0) at ../src/backends/meta-stage.c:197
#43 0x00007efe877e69c3 in clutter_actor_continue_paint (self=0x563212026d00 [MetaStage], paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:4200
#44 0x00007efe87823feb in clutter_paint_node_paint (node=0x563212b532d0 [ClutterActorNode], paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-paint-node.c:1027
#45 0x00007efe87823fff in clutter_paint_node_paint (node=0x563216a5cd60 [ClutterTransformNode], paint_context=0x563216c91fe0) at ../clutter/clutter/clutter-paint-node.c:1034
#46 0x00007efe877ed00f in clutter_actor_paint (self=0x563212026d00 [MetaStage], paint_context=paint_context@entry=0x563216c91fe0) at ../clutter/clutter/clutter-actor.c:4136
#47 0x00007efe8783501c in clutter_stage_do_paint_view (stage=0x563212026d00 [MetaStage], view=0x563211c8e3c0 [MetaRendererView], redraw_clip=0x563217013e00) at ../clutter/clutter/clutter-stage.c:942
#48 0x00007efe87644188 in meta_stage_paint_view (stage=0x563212026d00 [MetaStage], view=0x563211c8e3c0 [MetaRendererView], redraw_clip=0x563217013e00) at ../src/backends/meta-stage.c:221
#49 0x00007efe87852116 in paint_stage (stage_cogl=stage_cogl@entry=0x563212064570 [MetaStageNative], view=view@entry=0x563211c8e3c0 [MetaRendererView], redraw_clip=redraw_clip@entry=0x563217013e00) at ../clutter/clutter/cogl/clutter-stage-cogl.c:492
#50 0x00007efe87853034 in clutter_stage_cogl_redraw_view (stage_window=stage_window@entry=0x563212064570, view=view@entry=0x563211c8e3c0 [MetaRendererView]) at ../clutter/clutter/cogl/clutter-stage-cogl.c:853
#51 0x00007efe87853324 in clutter_stage_cogl_redraw (stage_window=0x563212064570) at ../clutter/clutter/cogl/clutter-stage-cogl.c:978
#52 0x00007efe87833322 in clutter_stage_do_redraw (stage=<optimized out>) at ../clutter/clutter/clutter-stage.c:1417
#53 _clutter_stage_do_update (stage=<optimized out>) at ../clutter/clutter/clutter-stage.c:1543
#54 0x00007efe8781f9ea in master_clock_update_stages (master_clock=0x563213431cc0 [report-technical-problems], stages=0x5632157ad010 = {...}) at ../clutter/clutter/clutter-master-clock-default.c:368
#55 clutter_clock_dispatch (source=0x563212a43100, callback=<optimized out>, user_data=<optimized out>) at ../clutter/clutter/clutter-master-clock-default.c:493
#56 0x00007efe880c3b72 in g_main_dispatch (context=0x7efe849c8aa0) at ../glib/gmain.c:3309
#57 g_main_context_dispatch (context=context@entry=0x7efe849c8aa0) at ../glib/gmain.c:3974
#58 0x00007efe880c3dda in g_main_context_iterate (context=0x7efe849c8aa0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4047
#59 0x00007efe880c4120 in g_main_loop_run (loop=0x5632121a15a0) at ../glib/gmain.c:4241
#60 0x00007efe87673cf5 in meta_run () at ../src/core/main.c:676
#61 0x0000563211a098ef in main (argc=<optimized out>, argv=<optimized out>) at ../src/main.c:550